Sun Apr 10 18:44:22 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
	
	* DAnCE/Config_Handlers/Basic_Deployment_Data.cpp
	* DAnCE/Config_Handlers/Basic_Deployment_Data.hpp
	* DAnCE/Config_Handlers/ccd.cpp
	* DAnCE/Config_Handlers/ccd.hpp

	Regenerated the handlers to reflect the changes in the previous
	commit. 
	
Sat Apr 09 18:35:23 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>

        * docs/schema/Basic_Deployment_Data.xsd
        * docs/schema/ccd.xsd
        
          Updated schemas to reflect changes made to Modified_Deployment
          in conformance to the spec.

Sat Apr 09 17:15:23 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher.mpc
  
          Changed the after clause to point to the XSC_Config_Handlers
          instad of the old config handlers.
    
Sat Apr 09 23:59:40 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/DomainApplicationManager/Deployment_Configuration.cpp

	  Fixed a bug where duplicated CORBALOC specified in the 
	  NodeManagerMap could cause undetected exception. This fix
	  will allow such duplication IOR error to be detected explicitly
	  and error message will be printed out. Thanks Steve Baker
	  <Steven_D_Baker@raytheon.com> for report this bug.

Fri Apr  8 14:30:52 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
	
	* DAnCE/Config_Handlers/cdp.cpp
	* DAnCE/Config_Handlers/cdp.hpp

	Regenerated handlers to reflect schema changes.
	
	* docs/schema/cdp.xsd

	Updated schema to allow 0 on the realizes element.
	
Fri Apr  8 13:33:24 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        
          Added backend support for attribute exceptions.

Thu Apr 07 14:49:40 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/examples/Hello/descriptors/basicNodeDaemon.pl
	* DAnCE/examples/Hello/descriptors/runNodeDaemons.pl

	  Removed the first file and added the second file since